# mep-list

./: README.md  main.py  pyproject.toml  pyrightconfig.json  test_social_media_output.csv
data_tmp/: social_media_cache.json
export_data/: members_enriched.csv  members_enriched.json  members_enriched.tsv  members_enriched.xlsx
input_data/: 101039.json  101585.json  103246.json  103381.json  103746.json  106936.json  107212.json  110673.json  111011.json  111412.json  112014.json  112611.json  112744.json  112747.json  112748.json  113523.json  113892.json  113959.json  114268.json  118859.json  118949.json  119431.json  119434.json  119435.json  119652.json  120478.json  122978.json  123562.json  124586.json  124691.json  124692.json  124693.json  124696.json  124700.json  124701.json  124704.json  124705.json  124708.json  124709.json  124710.json  (+1227 more)
src/mep_download/: __init__.py  eu_api.py  how_they_vote_members.py  scrape_socials.py
src/mep_list/: __init__.py  export.py  wrangle.py
tests/: test_scrape_socials.py
