[project]
name = "mep-list"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paul", email = "research@paul-elvis.com" }
]
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]

[project.scripts]
mep-list = "mep_list:main"
mep-download = "mep_download:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
